<?xml version="1.0"?>
<package>
  <name>nodelet_test_pkg</name>
  <version>0.1.0</version>
  <description>The nodelet_test_pkg package</description>
  <maintainer email="peter@todo.todo">peter</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_cv</run_depend>
  <!--build_depend>mrpt</build_depend--> <!-- Depend on mrpt system pkgs -->
  <!--run_depend>mrpt</run_depend--> <!-- Depend on mrpt system pkgs -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins/nodelets.xml" /> 
  </export>
</package>